<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".login.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/inputSenhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_rectangle_white"
        android:ems="10"
        android:hint="@string/senha_maiusculo"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="10dp"
        android:paddingBottom="12dp"
        android:textColor="@color/blueTxt"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rectangle_yellow"
        android:padding="5dp"
        android:text="@string/entrar_maiusculo"
        android:textColor="@color/blueTxt"
        app:layout_constraintEnd_toEndOf="@+id/inputSenhaLogin"
        app:layout_constraintStart_toStartOf="@+id/inputSenhaLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputSenhaLogin" />

    <Button
        android:id="@+id/btnSairLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rectangle_yellow"
        android:text="@string/sair_maiusculo"
        android:textColor="@color/blueTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>