<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutConfigTempo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/input_rectangle_white_with_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_config_tempo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_luz_alta"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editTextConfigLuzAlta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_rectangle_white_with_border"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/editTextConfigLuzBaixa"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/editTextConfigLuzBaixa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_rectangle_white_with_border"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextConfigLuzAlta"
                app:layout_constraintTop_toTopOf="@+id/editTextConfigLuzAlta" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_luz_baixa"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextConfigLuzBaixa"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <CheckBox
                android:id="@+id/checkBoxConfigManterLuzBaixa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txt_manter_luz_baixa"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextConfigLuzAlta"
                app:layout_constraintTop_toBottomOf="@+id/editTextConfigLuzAlta" />

            <Button
                android:id="@+id/btnSalvarConfigTempo"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_rectangle_blue"
                android:text="@string/btn_salvar"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxConfigManterLuzBaixa" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutConfigLuminosidadeAlta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/input_rectangle_white_with_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutConfigTempo">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_config_luminosidade_alta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/luz_alta"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <SeekBar
                android:id="@+id/seekBarConfigLuzAlta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:theme="@style/MySeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <Button
                android:id="@+id/btnPlusConfigLuzAlta"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_circle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt_plus"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarConfigLuzAlta" />

            <TextView
                android:id="@+id/textViewPorcentagemConfigLuzAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="050"
                android:textColor="@color/blueTxt"
                app:layout_constraintBottom_toBottomOf="@+id/btnPlusConfigLuzAlta"
                app:layout_constraintEnd_toStartOf="@+id/btnPlusConfigLuzAlta"
                app:layout_constraintTop_toTopOf="@+id/btnPlusConfigLuzAlta" />

            <Button
                android:id="@+id/btnConfigMenosLuzAlta"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_circle"
                android:text="@string/txt_menos"
                app:layout_constraintBottom_toBottomOf="@+id/btnPlusConfigLuzAlta"
                app:layout_constraintEnd_toStartOf="@+id/textViewPorcentagemConfigLuzAlta"
                app:layout_constraintTop_toTopOf="@+id/btnPlusConfigLuzAlta" />

            <Button
                android:id="@+id/btnSalvarConfigLuminosidadeAlta"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_rectangle_blue"
                android:text="@string/txt_confirmar"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPlusConfigLuzAlta" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutConfigLuminosidadeBaixa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input_rectangle_white_with_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutConfigLuminosidadeAlta">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_config_luminosidade_baixa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPlusConfigLuzBaixa"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_circle"
                android:text="@string/txt_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarConfigLuzBaixa" />

            <TextView
                android:id="@+id/textViewPorcentagemConfigLuzBaixa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="050"
                android:textColor="@color/blueTxt"
                app:layout_constraintBottom_toBottomOf="@+id/btnPlusConfigLuzBaixa"
                app:layout_constraintEnd_toStartOf="@+id/btnPlusConfigLuzBaixa"
                app:layout_constraintTop_toTopOf="@+id/btnPlusConfigLuzBaixa" />

            <Button
                android:id="@+id/btnMenosConfigLuzBaixa"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_circle"
                android:text="@string/txt_menos"
                app:layout_constraintBottom_toBottomOf="@+id/btnPlusConfigLuzBaixa"
                app:layout_constraintEnd_toStartOf="@+id/textViewPorcentagemConfigLuzBaixa"
                app:layout_constraintTop_toTopOf="@+id/btnPlusConfigLuzBaixa" />

            <SeekBar
                android:id="@+id/seekBarConfigLuzBaixa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:theme="@style/MySeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/luz_baixa"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <Button
                android:id="@+id/btnSalvarConfigLuminosidadeBaixa"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_rectangle_blue"
                android:text="@string/txt_confirmar"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPlusConfigLuzBaixa" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>



</ScrollView>
